--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,15 @@
   </head>
   <body>
     <h1>🐾 HW 11</h1>
-    <!-- <select class="breed-select is-hidden"></select> -->
-    <!-- <p class="loader">Loading data, please wait...</p> -->
-    <!-- <span class="loader"></span> -->
-    <!-- <p class="error">
-      Oops! Something went wrong! Try reloading the page!
-    </p> -->
-    <!-- <div class="cat-info is-hidden"></div> -->
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
 
     <script src="./js/index.js" type="module"></script>
   </body>
