--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
       />
       <button type="submit">Search</button>
     </form>
+    <div class="gallery"></div>
+    <div class="js-guard"></div>
 
     <script src="./js/index.js" type="module"></script>
   </body>
