--- a/src/index.html
+++ b/src/index.html
@@ -23,3 +23,5 @@
     <script src="./js/index.js" type="module"></script>
   </body>
 </html>
+
+<!-- placeholder="What are you're looking for?" -->
