--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     </form>
     <div class="gallery"></div>
     <div class="js-guard"></div>
+    <!-- <button type="button" class="btn-up">&#11014;</button> -->
+    <button type="button" class="btn-up">&#8963;</button>
 
     <script src="./js/index.js" type="module"></script>
   </body>
