--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,19 @@
   </head>
   <body>
     <h1>🐾 HW 11</h1>
-    <form class="search-form" id="search-form">
-      <input
-        type="text"
-        name="searchQuery"
-        autocomplete="off"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
+
+    <div class="wrapper-form">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+    </div>
+
     <div class="gallery"></div>
     <div class="js-guard"></div>
     <!-- <button type="button" class="btn-up">&#11014;</button> -->
