--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
           autocomplete="off"
           placeholder="Search images..."
         />
-        <button type="submit">Search</button>
+        <button class="btn-form" type="submit">Search</button>
       </form>
     </div>
 
